--- a/front/package.json
+++ b/front/package.json
@@ -6,18 +6,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "test:unit": "vitest"
   },
   "dependencies": {
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.40.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
