--- a/front/package.json
+++ b/front/package.json
@@ -5,21 +5,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.40.1",
+    "primevue": "^3.41.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/test-utils": "^2.4.1",
-    "jsdom": "^22.1.0",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "vite": "^4.4.11"
   }
 }
