--- a/front/package.json
+++ b/front/package.json
@@ -2,23 +2,22 @@
   "name": "front",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.41.0",
-    "vue": "^3.3.4",
-    "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.4.3"
+    "primevue": "^3.43.0",
+    "vue": "^3.3.10",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.0",
-    "vite": "^4.4.11"
+    "@vitejs/plugin-vue": "^4.5.1",
+    "vite": "^5.0.5"
   }
 }
